refactored db and fixed a bug

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=postgresql://postgres:ZFtswTWcRkfRMQbHAEB0@containers-us-west-88.railway.app:7879/railway
+DATABASE_URL=postgresql://postgres:OTquuAXsVR9HUR8B9y0t@containers-us-west-61.railway.app:7392/railway
 EMAIL_SERVER=smtp://ce4cae478e35e5:e35c4d61446d3b@smtp.mailtrap.io:465
 EMAIL_FROM=pablo<you@email.com>
 NEXTAUTH_URL=http://localhost:3000
